add filesystem examples

--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "scripts": {
     "test": "react-scripts test"
+  },
+  "devDependencies": {
+    "memfs": "^3.2.0",
+    "unionfs": "^4.4.0"
   }
 }
